setting static background and fixing post feed overlap

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -39,4 +39,6 @@
 
 body {
   background-image: linear-gradient(to top right, rgba(227, 22, 22, 0.635), rgba(243, 222, 222, 0.793), rgba(21, 21, 231, 0.697));
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
